parser/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
package parser;
import syntax.Type;
import syntax.Program;
import syntax.MainClass;
import syntax.ClassDecl;
import syntax.Expression;
import syntax.And;
import syntax.Plus;
import syntax.Minus;
import syntax.Times;
import syntax.LessThan;
import syntax.Call;
import syntax.NewArray;
import syntax.ArrayLength;
import syntax.ArrayLookup;
import syntax.NewObject;
import syntax.IntegerLiteral;
import syntax.True;
import syntax.False;
import syntax.IdentifierExp;
import syntax.Not;
import syntax.This;
import syntax.Identifier;
import syntax.IdentifierType;
import syntax.Statement;
import syntax.Block;
import syntax.If;
import syntax.While;
import syntax.Print;
import syntax.ArrayAssign;
import syntax.Assign;
import syntax.MethodDecl;
import syntax.FieldDecl;
import syntax.LocalDecl;
import syntax.FormalDecl;
import syntax.SimpleClassDecl;
import syntax.ExtendingClassDecl;
import error.ErrorHandler;

import java.util.*;

public class MiniJavaParser implements MiniJavaParserConstants {
        private static boolean first = false;

  static final public Program Goal() throws ParseException {
                MainClass m;
                List <ClassDecl> cl = new ArrayList<ClassDecl>();
                        ClassDecl temp;
    try {
      m = MainClass();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        temp = ClassDecl();
                                                         cl.add(temp);
      }
      jj_consume_token(0);
                                                                                 {if (true) return new Program(m, cl);}
    } catch (ParseException e) {
                        ErrorHandler(e);
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
                Identifier ai1;
                Identifier ai2;
                Statement as;
                Token t1, t2;
    try {
      jj_consume_token(CLASS);
      t1 = jj_consume_token(IDENTIFIER);
                                                         ai1=new Identifier(t1.beginLine, t1.beginColumn, t1.image);
      jj_consume_token(CURLYOPEN);
      jj_consume_token(PUBLIC);
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(PAROPEN);
      jj_consume_token(STRING);
      jj_consume_token(SQBOPEN);
      jj_consume_token(SQBCLOSE);
      t2 = jj_consume_token(IDENTIFIER);
                                                                                                                                 ai2=new Identifier(t2.beginLine, t2.beginColumn, t2.image);
      jj_consume_token(PARCLOSE);
      jj_consume_token(CURLYOPEN);
      as = Statement();
      jj_consume_token(CURLYCLOSE);
      jj_consume_token(CURLYCLOSE);
                                          {if (true) return new MainClass(t1.beginLine, t1.beginColumn, ai1, ai2, as);}
    } catch (ParseException e) {
                                ErrorHandler(e);
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {
                        Identifier ai;
                        List <FieldDecl> afl = new ArrayList<FieldDecl>();
                        List <MethodDecl> aml = new ArrayList<MethodDecl>();
                        Identifier aj;

                        Identifier tempAj = null;

                        FieldDecl tempField;
                        MethodDecl tempMethod;
                        Token id1, extId;
                        boolean extended = false;
    try {
      jj_consume_token(CLASS);
      id1 = jj_consume_token(IDENTIFIER);
                                                          ai=new Identifier(id1.beginLine, id1.beginColumn, id1.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EXTENDS:
        jj_consume_token(EXTENDS);
        extId = jj_consume_token(IDENTIFIER);
                                                                                                                                                        tempAj=new Identifier(extId.beginLine, extId.beginColumn, extId.image); extended = true;
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      jj_consume_token(CURLYOPEN);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TYPEBOOL:
        case TYPEINT:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        tempField = FieldDecl();
                                                        afl.add(tempField);
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        tempMethod = MethodDeclaration();
                                                                         aml.add(tempMethod);
      }
      jj_consume_token(CURLYCLOSE);
                          if(extended) {
                              aj = tempAj;
                                  {if (true) return new ExtendingClassDecl(ai, aj, afl, aml);}
                                } else {
                                          {if (true) return new SimpleClassDecl(ai, afl, aml);}
                                }
    } catch (ParseException e) {
                                ErrorHandler(e);
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public LocalDecl LocalDecl() throws ParseException {
                        Type at;
                        Identifier ai;

                        Token id1;
    try {
      at = Type();
      id1 = jj_consume_token(IDENTIFIER);
      jj_consume_token(SEMICOLON);
                                  ai=new Identifier(id1.beginLine, id1.beginColumn, id1.image);
                                  {if (true) return new LocalDecl(at, ai);}
    } catch (ParseException e) {
                                ErrorHandler(e);
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public FieldDecl FieldDecl() throws ParseException {
                        Type at;
                        Identifier ai;

                        Token id1;
    try {
      at = Type();
      id1 = jj_consume_token(IDENTIFIER);
      jj_consume_token(SEMICOLON);
                                  ai=new Identifier(id1.beginLine, id1.beginColumn, id1.image);
                                  {if (true) return new FieldDecl(at, ai);}
    } catch (ParseException e) {
                                ErrorHandler(e);
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDeclaration() throws ParseException {
                        syntax.Type at;
                Identifier ai;
                List <FormalDecl> afl = new ArrayList<FormalDecl>();
                List <LocalDecl> ll = new ArrayList<LocalDecl>();
                List <Statement> asl = new ArrayList<Statement>();
                Expression ae;

                Type t1, t2;
                        Identifier fId1, fId2;

                        Token id1, id2, id3;
                        FormalDecl fDec1, fDec2;
                        LocalDecl lDec;
                        Statement sTemp;
    try {
      jj_consume_token(PUBLIC);
      at = Type();
      id1 = jj_consume_token(IDENTIFIER);
                                                                     ai=new Identifier(id1.beginLine, id1.beginColumn, id1.image);
      jj_consume_token(PAROPEN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TYPEBOOL:
      case TYPEINT:
      case IDENTIFIER:
        t1 = Type();
        id2 = jj_consume_token(IDENTIFIER);
                                                                                                                                                                           fId1=new Identifier(id2.beginLine, id2.beginColumn, id2.image); fDec1=new FormalDecl(t1, fId1); afl.add(fDec1);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          jj_consume_token(COMMA);
          t2 = Type();
          id3 = jj_consume_token(IDENTIFIER);
                                                                                                                                                                                                                                                                                                                                fId2=new Identifier(id3.beginLine, id3.beginColumn, id3.image); fDec2=new FormalDecl(t2, fId2); afl.add(fDec2);
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(PARCLOSE);
      jj_consume_token(CURLYOPEN);
      label_5:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_5;
        }
        lDec = LocalDecl();
                                                                ll.add(lDec);
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case PRINT:
        case CURLYOPEN:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_6;
        }
        sTemp = Statement();
                                                        asl.add(sTemp);
      }
      jj_consume_token(RETURN);
      ae = Expression();
      jj_consume_token(SEMICOLON);
      jj_consume_token(CURLYCLOSE);
                                        {if (true) return new MethodDecl(at, ai, afl, ll, asl, ae);}
    } catch (ParseException e) {
                                ErrorHandler(e);
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
                        Token id1;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TYPEINT:
        jj_consume_token(TYPEINT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SQBOPEN:
          jj_consume_token(SQBOPEN);
          jj_consume_token(SQBCLOSE);
                                                                  {if (true) return Type.THE_INT_ARRAY_TYPE;}
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
                                                                                                     {if (true) return Type.THE_INTEGER_TYPE;}
        break;
      case TYPEBOOL:
        jj_consume_token(TYPEBOOL);
                                             {if (true) return Type.THE_BOOLEAN_TYPE;}
        break;
      case IDENTIFIER:
        id1 = jj_consume_token(IDENTIFIER);
                                                   {if (true) return new IdentifierType(id1.beginLine, id1.beginColumn, id1.image);}
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                                ErrorHandler(e);
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
                        Identifier nameOfArray;
                        Expression indexInArray;
                        Expression arrE;

                        Expression printE;

                        Expression whileE;
                        Statement whileState;

                        Expression ifE;
                        Statement ifS1, ifS2;

                        Expression temp = null;

                        Token id1;

                        boolean arrAss = false;
                        Statement blkS;
                        final List <Statement> sl = new ArrayList<Statement>();
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CURLYOPEN:
        jj_consume_token(CURLYOPEN);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IF:
          case WHILE:
          case PRINT:
          case CURLYOPEN:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_7;
          }
          blkS = Statement();
                                                                sl.add(blkS);
        }
        jj_consume_token(CURLYCLOSE);
                                                                                               {if (true) return new Block(sl);}
        break;
      case IF:
        jj_consume_token(IF);
        jj_consume_token(PAROPEN);
        ifE = Expression();
        jj_consume_token(PARCLOSE);
        ifS1 = Statement();
        jj_consume_token(ELSE);
        ifS2 = Statement();
                                                                                                                        {if (true) return new If(ifE.lineNumber, ifE.columnNumber, ifE, ifS1, ifS2);}
        break;
      case WHILE:
        jj_consume_token(WHILE);
        jj_consume_token(PAROPEN);
        whileE = Expression();
        jj_consume_token(PARCLOSE);
        whileState = Statement();
                                                                                                            {if (true) return new While(whileE.lineNumber, whileE.columnNumber, whileE, whileState);}
        break;
      case PRINT:
        jj_consume_token(PRINT);
        jj_consume_token(PAROPEN);
        printE = Expression();
        jj_consume_token(PARCLOSE);
        jj_consume_token(SEMICOLON);
                                                                                                 {if (true) return new Print(printE.lineNumber, printE.columnNumber, printE);}
        break;
      case IDENTIFIER:
        id1 = jj_consume_token(IDENTIFIER);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SQBOPEN:
          jj_consume_token(SQBOPEN);
          temp = Expression();
          jj_consume_token(SQBCLOSE);
                                                                                             arrAss=true;
          break;
        default:
          jj_la1[10] = jj_gen;
          ;
        }
        jj_consume_token(EQUAL);
        arrE = Expression();
        jj_consume_token(SEMICOLON);
                                    if(arrAss) {
                                        indexInArray=temp;
                                                nameOfArray=new Identifier(id1.beginLine, id1.beginColumn, id1.image);
                                                {if (true) return new ArrayAssign(id1.beginLine, id1.beginColumn, nameOfArray, indexInArray, arrE);}
                                        } else if(!arrAss) {
                                                nameOfArray=new Identifier(id1.beginLine, id1.beginColumn, id1.image);
                                                {if (true) return new Assign(id1.beginLine, id1.beginColumn, nameOfArray, arrE);}
                                        }
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                                ErrorHandler(e);
                                {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

// You must remove left recursion before writing your grammar rules in JavaCC.
// The general approach is to replace rules of the form A - > a | Ax with A - > a (x)*
  static final public Expression Expression() throws ParseException {
                Expression e1;
    try {
      e1 = And();
                                  {if (true) return e1;}
    } catch (ParseException e) {
                        ErrorHandler(e);
                        {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression And() throws ParseException {
          Expression e1, e2;
    try {
      e1 = LessThan();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_8;
        }
        jj_consume_token(AND);
        e2 = LessThan();
                                                            e1=new And(e1.lineNumber, e1.columnNumber, e1, e2);
      }
                                                                                                                     {if (true) return e1;}
    } catch (ParseException e) {
                        ErrorHandler(e);
                        {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression LessThan() throws ParseException {
                Expression e1, e2;
    try {
      e1 = AdditiveExp();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LESSTHAN:
        jj_consume_token(LESSTHAN);
        e2 = AdditiveExp();
                                                                        e1=new LessThan(e1.lineNumber, e1.columnNumber, e1, e2);
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
                                                                                                                                    {if (true) return e1;}
    } catch (ParseException e) {
                        ErrorHandler(e);
                        {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression AdditiveExp() throws ParseException {
                Expression e1, e2;

                boolean plus = false;
    try {
      e1 = Times();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_9;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          jj_consume_token(PLUS);
                                             plus=true;
          break;
        case MINUS:
          jj_consume_token(MINUS);
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        e2 = Times();
                                                                              if(plus) e1=new Plus(e1.lineNumber, e1.columnNumber, e1, e2); else e1=new Minus(e1.lineNumber, e1.columnNumber, e1, e2);
      }
                                                                                                                                                                                                           {if (true) return e1;}
    } catch (ParseException e) {
                        ErrorHandler(e);
                        {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression Times() throws ParseException {
                Expression e1, e2;
    try {
      e1 = PrefixExp();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TIMES:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_10;
        }
        jj_consume_token(TIMES);
        e2 = PrefixExp();
                                                                e1=new Times(e1.lineNumber, e1.columnNumber, e1, e2);
      }
                                                                                                                          {if (true) return e1;}
    } catch (ParseException e) {
                        ErrorHandler(e);
                        {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }
